welcome.lessons.welcome.traversal.Snake.scala.error
SnakeBuggle:11: error: value est is not a member of object plm.universe.Direction
  if ((getDirection()==Direction.est) && estFaceMur()) {
                                 ^SnakeBuggle:13: error: type mismatch;
 found   : Unit
 required: Boolean
    if (estFaceMur()) {
    ^SnakeBuggle:25: error: value est is not a member of object plm.universe.Direction
  if (getDirection()==Direction.est) {
                                ^